# vscode-rbioc

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPER_GUIDE.md  Dockerfile  Readme.md  USER_GUIDE.md  history.Dockerfile  newHistory.Dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: Readme.md  publish-to-github-package.yaml
assets/: common-debian.sh  environment copy.yml  environment.yml
config/: jupyter_lab_config.py
rbiocverse/: DESCRIPTION  DESCRIPTION.apollo.3.19.from  DESCRIPTION.apollo.3.22.to  DESCRIPTION.gemini.3.19.from  LICENSE  NAMESPACE  pyproject.toml
scripts/: cluster-config.sh  install-packages.sh  install-python.sh  install-vscode-extension.sh  install.R  keyring-setup.sh  migrate-packages.R  pull-container.sh  slurm-wrappers.sh  sync-packages.sh  sync-python-packages.sh  sync-python.py  update-description.R
slurm_install/: install.slurm  install_phase1_deps.slurm  install_phase2_leaves.slurm  pkgs_001.txt  pkgs_002.txt  pkgs_003.txt  pkgs_004.txt  pkgs_005.txt  pkgs_006.txt  pkgs_007.txt  pkgs_008.txt  pkgs_009.txt  pkgs_010.txt  pkgs_011.txt  pkgs_012.txt  pkgs_013.txt  pkgs_014.txt  pkgs_015.txt  pkgs_016.txt  pkgs_017.txt  pkgs_018.txt  pkgs_019.txt  pkgs_020.txt  pkgs_deps.txt  pkgs_leaf_001.txt  pkgs_leaf_002.txt  pkgs_leaf_003.txt  pkgs_leaf_004.txt  pkgs_leaf_005.txt  pkgs_leaf_006.txt  pkgs_leaf_007.txt  pkgs_leaf_008.txt  pkgs_leaf_009.txt  pkgs_leaf_010.txt  pkgs_leaf_011.txt  pkgs_leaf_012.txt  pkgs_leaf_013.txt  pkgs_leaf_014.txt  pkgs_leaf_015.txt  pkgs_leaf_016.txt  (+5 more)
testing/: Dockerfile
